--- a/index.css
+++ b/index.css
@@ -172,3 +172,35 @@ h1 {
   width: 50%;
   text-align: center;
 }
+.time{
+  width: 30%;
+}
+#caption{
+  text-align: left;
+  margin-bottom: 1em;
+}
+#today{
+  width: 7%;
+  color: #2c3e50;
+}
+#title{
+  font-size: 4vh;
+}
+#print-btn{
+    background-color: #04AA6D; /* 녹색 배경 */
+    border: none;
+    color: white;
+    padding: 0.5vh 0.5vh;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vh;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border-radius: 12px;
+    margin-left: 1vh;
+    transition-duration: 0.4s;
+}
+#print-btn:hover{
+  background-color: #48ff00;
+  color: white;
+}
